# Airbnb-Clone-Backend

./: pyproject.toml
bookings/: models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py
categories/migrations/: 0001_initial.py
common/: models.py  permissions.py
common/migrations/: 0001_initial.py
config/: settings.py  urls.py
experiences/: models.py  serializers.py  views.py
experiences/migrations/: 0001_initial.py  0002_alter_perk_details_alter_perk_explanation.py  0002_initial.py  0003_experience_categroy.py
medias/: models.py  serializers.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_review_room_alter_review_user.py
rooms/: admin.py  models.py  schema.py  serializers.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options.py  0003_alter_room_amenities_alter_room_categroy_and_more.py  0004_rename_categroy_room_category.py  0004_room_categroy.py
rooms/templates/: all_rooms.html  room_detail.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0003_remove_user_currency_user_curreny_alter_user_gender_and_more.py
wishlists/: models.py  views.py
wishlists/migrations/: 0001_initial.py  (+1 more)
